<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbPlayerSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_player_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/pbSearchLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/rvPlayerSearchResults"
        app:layout_constraintRight_toRightOf="@+id/rvPlayerSearchResults"
        app:layout_constraintTop_toTopOf="@+id/rvPlayerSearchResults"
        app:layout_constraintBottom_toBottomOf="@+id/rvPlayerSearchResults"/>

    <TextView
        android:id="@+id/tvNoPlayersFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_search_no_results"
        android:textSize="32dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/rvPlayerSearchResults"
        app:layout_constraintLeft_toLeftOf="@+id/rvPlayerSearchResults"
        app:layout_constraintRight_toRightOf="@+id/rvPlayerSearchResults"
        app:layout_constraintBottom_toBottomOf="@+id/rvPlayerSearchResults"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayerSearchResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_player_search_result"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltSortButtons"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ltSortButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tbPlayerSearch"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_search_sort"
            android:textSize="24dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnSortAscOrder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnSortAscOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_search_sort_ascending_button"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvSortBy"
            app:layout_constraintRight_toLeftOf="@+id/btnSortDescOrder"/>

        <Button
            android:id="@+id/btnSortDescOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_search_sort_descending_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btnSortAscOrder"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>