<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="16dp"
    android:id="@+id/ltGamePreviewItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ltGameTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        android:id="@+id/tvGameTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        tools:text="08:30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGameDate"/>

    <TextView
        android:id="@+id/tvGameDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2022-02-16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGameTeams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/ltGameTime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ltHomeTeam"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvVersus">

            <TextView
                android:id="@+id/tvHomeTeamTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/item_game_home_team_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHomeTeamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeMaxTextSize="16dp"
                android:autoSizeTextType="uniform"
                tools:text="Brooklyn Nets"
                android:maxLines="2"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHomeTeamTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_game_versus_title"
            app:layout_constraintLeft_toLeftOf="@+id/glTeamDivider"
            app:layout_constraintRight_toRightOf="@+id/glTeamDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTeamDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ltVisitorTeam"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvVersus"
            app:layout_constraintRight_toLeftOf="@+id/ivArrow">

            <TextView
                android:id="@+id/tvVisitorTeamTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8dp"
                android:text="@string/item_game_visitor_team_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tvVisitorTeamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Philadelphia Sixers"
                android:autoSizeMinTextSize="8dp"
                android:autoSizeMaxTextSize="16dp"
                android:autoSizeTextType="uniform"
                android:maxLines="2"
                android:gravity="center_horizontal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVisitorTeamTitle"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>